# magba

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  TODO.md  architecture.md  asv.conf.json  magba.code-workspace  pyproject.toml  requirements.in  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: compile.yml  coverage.yml  magba-ci.yml  publish.yml
benches/: bench.rs  bench_special.rs  impl_parallel.txt  par_threshold.md  threshold.rs
examples/: generate_error_report.rs  generate_threshold_code.rs  paper_example.rs
magba-dev-utils/: Cargo.toml  README.md
magba-dev-utils/src/: benchmark.rs  lib.rs  test_report.rs
magba-macros/src/: lib.rs
paper/: paper.bib  paper.md
preprint/: makefile  paper.md
python/: main.py  test_generation_util.py
python/benchmarks/: benchmarks_currents.py  benchmarks_magnets.py  generating-magpylib-benchmark.md
python/generate_test_magpy/: cuboid.py  currents.py  cylinder.py  heterogeneous_source_collection.py  homogeneous_source_collection.py  magnets.py  multi_source_collection.py  single_source_collection.py  static_tests.py  stl_mesh.py
src/: constants.rs  conversion.rs  crate_util.rs  crate_utils.rs  lib.rs  macros.rs  shorthands.rs  testing_util.rs  util.rs
src/base/: coordinate.rs  math.rs  mesh.rs  mod.rs  observer.rs  pose.rs  source.rs  transform.rs
src/collections/: collection.rs  component.rs  macros.rs  mod.rs  node.rs  observer_array.rs  observer_assembly.rs  observer_component.rs  sensor_array.rs  sensor_assembly.rs  sensor_component.rs  source_array.rs  source_assembly.rs  source_component.rs  utils.rs
src/core/: measure.rs  mod.rs  source.rs  transform.rs
src/currents/: circular.rs  current.rs  current_path.rs  mod.rs  path.rs  path_current.rs  sheet.rs  triangle.rs
src/field/: field_cylinder.rs  mod.rs
src/fields/: conversion.rs  field_circular.rs  field_cuboid.rs  field_current_path.rs  field_cylinder.rs  field_cylindrical.rs  field_dipole.rs  field_mesh.rs  field_path_current.rs  field_sheet_current.rs  field_sphere.rs  field_tetrahedron.rs  field_triangle.rs  field_triangle_current.rs  field_zero.rs  mod.rs
src/geometry/: coordinate.rs  mod.rs  pose.rs  transform.rs
src/magnets/: cuboid.rs  cylinder.rs  define_magnet.rs  dipole.rs  magnet.rs  mesh.rs  mod.rs  sphere.rs  stable_field.rs  tetrahedron.rs  triangle.rs  zero_magnet.rs
src/measurement/: mod.rs
src/measurement/hall_effect/: hall_latch.rs  hall_switch.rs  linear_hall.rs  mod.rs
src/sensors/: mod.rs  sensor.rs
src/sensors/hall_effect/: hall_latch.rs  hall_switch.rs  linear_hall_sensor.rs  mod.rs
src/source/: cylinder.rs  mod.rs  source.rs
src/sources/: boxed_collection.rs  collection.rs  cuboid.rs  cylinder.rs  dcollection.rs  dipole.rs  magnets.rs  mod.rs  scollection.rs  source.rs  zero_magnet.rs
src/sources/collections/: boxed_collection.rs  collection.rs  mod.rs
src/sources/magnets/: cuboid.rs  cylinder.rs  mod.rs
src/special/: cel.rs  constants.rs  elliptic.rs  mod.rs
tests/: README.md  helper.rs  report_template.md  test_field.rs  test_macros.rs  test_special.rs
tests/test-data/: circularcurrent-rotate-translate.csv  circularcurrent-rotate.csv  circularcurrent-small.csv  circularcurrent-translate.csv  circularcurrent.csv  cuboid-collection-rotate.csv  cuboid-collection-translate-rotate.csv  cuboid-collection-translate.csv  cuboid-collection.csv  cuboid-rotate-translate.csv  cuboid-rotate.csv  cuboid-small.csv  cuboid-sources-rotate.csv  cuboid-sources-translate-rotate.csv  cuboid-translate.csv  cuboid.csv  cylinder-axial-result.csv  cylinder-axial-result.mtx  cylinder-axial.csv  cylinder-collection-result.csv  cylinder-collection-result.mtx  cylinder-collection-rotate-result.csv  cylinder-collection-rotate-result.mtx  cylinder-collection-rotate.csv  cylinder-collection-translate-result.csv  cylinder-collection-translate-result.mtx  cylinder-collection-translate-rotate-result.csv  cylinder-collection-translate-rotate-result.mtx  cylinder-collection-translate-rotate.csv  cylinder-collection-translate.csv  cylinder-collection.csv  cylinder-diametric-2.csv  cylinder-diametric-result-2.csv  cylinder-diametric-result-2.mtx  cylinder-diametric-result.mtx  cylinder-diametric.csv  cylinder-points-small.csv  cylinder-points.csv  cylinder-result.csv  cylinder-result.mtx  (+60 more)
