[package]
name = "magba"
version = "0.3.0"
edition = "2021"
description = "Magnetic computation library for Rust"
documentation = "https://docs.rs/magba"
readme = "README.md"
homepage = "https://github.com/p-sira/magba"
repository = "https://github.com/p-sira/magba"
license = "BSD-3-Clause"
keywords = ["analytical", "field", "magnet", "magnetic", "simulation"]
categories = ["science", "simulation"]
include = ["/src", "/tests/README.md", "/LICENSE"]

[package.metadata]
authors = ["Sira Pornsiriprasert <code@psira.me>"]

[[bench]]
harness = false
name = "bench"

[dependencies]
ellip = { version = "1.0.2", features = ["unstable"] }
getset = "0.1.6"
itertools = "0.14.0"
nalgebra = { version = "0.33.2" }
num-traits = "0.2.19"
numeric_literals = "0.2.0"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.1"
nalgebra = { version = "0.33.2" }
rayon = "1.10.0"
regex = "1.12.2"

[features]
default = ["parallel", "sources"]
no_std = []
parallel = ["dep:rayon", "nalgebra/rayon"]
sources = ["transform"]
transform = []
unstable = []
