[workspace]
members = []

[workspace.package]
version = "0.3.0"
authors = ["Sira Pornsiriprasert <code@psira.me>"]
documentation = "https://docs.rs/magba"
homepage = "https://github.com/p-sira/magba"
repository = "https://github.com/p-sira/magba"
license = "BSD-3-Clause"
keywords = ["analytical", "field", "magnet", "magnetic", "simulation", "no_std"]
categories = ["science", "simulation"]

[package]
name = "magba"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

edition = "2024"
readme = "README.md"
description = "Magnetic computation library for Rust"
include = ["/src", "/LICENSE"]

[[bench]]
harness = false
name = "bench"

[dependencies]
concat-idents = "1.1.5"
delegate = "0.13.5"
derive_more = { version = "2.1.1", optional = true, features = ["display"] }
dyn-clone = { version = "1.0.20", optional = true }
ellip = { version = "1.1.0", default-features = false, features = ["unstable"] }
enum_dispatch = "0.3.13"
getset = "0.1.6"
itertools = { version = "0.14.0", default-features = false }
nalgebra = { version = "0.34.1", default-features = false, features = ["macros"] }
num-traits = { version = "0.2.19", default-features = false }
numeric_literals = "0.2.0"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
csv = "1.3.1"
regex = "1.12.2"

[features]
default = ["std", "rayon"]
alloc = ["nalgebra/alloc"]
std = [
    "alloc",
    "ellip/std",
    "num-traits/std",
    "nalgebra/std",
    "dep:derive_more",
    "dep:dyn-clone",
]
rayon = ["std", "dep:rayon", "nalgebra/rayon"]
libm = ["ellip/libm", "num-traits/libm", "nalgebra/libm"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
