[workspace]
members = ["magba-dev-utils"]

[workspace.package]
version = "0.4.4"
authors = ["Sira Pornsiriprasert <code@psira.me>"]
documentation = "https://docs.rs/magba"
homepage = "https://github.com/p-sira/magba"
repository = "https://github.com/p-sira/magba"
license = "BSD-3-Clause"
keywords = [
    "analytical",
    "magnetism",
    "magnetic-field",
    "simulation",
    "physics",
]
categories = ["science", "simulation", "no-std"]

[workspace.dependencies]
magba = { version = "0.4", path = "." }
magba-dev-utils = { version = "0.4", path = "magba-dev-utils" }

[package]
name = "magba"
version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

edition = "2024"
readme = "README.md"
description = "Magnetic computation library for Rust"
include = ["/src", "/LICENSE"]

[[bench]]
harness = false
name = "bench"

[dependencies]
concat-idents = "1.1.5"
delegate = "0.13.5"
derive_more = { version = "2.1.1", optional = true, features = ["display"] }
dyn-clone = { version = "1.0.20", optional = true }
ellip = { version = "1.1.0", default-features = false, features = ["unstable"] }
enum_dispatch = "0.3.13"
getset = "0.1.6"
itertools = { version = "0.14.0", default-features = false }
nalgebra = { version = "0.34.2", default-features = false, features = [
    "macros",
] }
num-traits = { version = "0.2.19", default-features = false }
numeric_literals = "0.2.0"
openmesh = { version = "0.2.1", default-features = false, features = [
    "libm",
    "nalgebra",
] }
rayon = { version = "1.10.0", optional = true }
rayx = { version = "0.1.2", default-features = false }
stl_io = { version = "0.11", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
csv = "1.3.1"
regex = "1.12.2"
serde_json = "1.0"
tabled = "0.18"
magba-dev-utils = { workspace = true }

[features]
default = ["std", "rayon", "mesh", "io-stl"]
std = [
    "alloc",
    "ellip/std",
    "num-traits/std",
    "nalgebra/std",
    "rayx/std",
    "openmesh/std",
    "dep:derive_more",
    "dep:dyn-clone",
]
alloc = ["nalgebra/alloc"]
rayon = ["std", "dep:rayon", "nalgebra/rayon"]
libm = ["ellip/libm", "num-traits/libm", "nalgebra/libm", "openmesh/libm"]
mesh = ["alloc"]
io-stl = ["mesh", "std", "openmesh/stl"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
