[package]
name = "magba-dev-utils"
edition = "2024"
version.workspace = true
authors.workspace = true

homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Development utilities for Magba."
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.18"
